Nov 29 2002  2.7.1  Changed client back to only updating once per second - 
                     massive speed improvements.
                    Fixed handling of adhoc probe/ssids
Nov 28 2002  2.7.1  Happy thanksgiving
                    Fixed tcpserver code for tracking the number of clients
                     using a protocol reference to actually have code, not
                     just a placeholder.
                    Sped up main filtering method
                    Added size column
                    Groups now aggregate data size
                    Profiling and speedboosts to kismet_client
Nov 27 2002  2.7.1  Updated kismet_hopper to work with the new source specs
Nov 26 2002  2.7.1  Removed user-specified capture engines.  They were 
                     redundant with the card type and led to misconfigurations.
                    Removed the linux-wireless generic capture engine entirely,
                     it was deprecrated and worthless.
Nov 25 2002  2.7.1  Enormous rewrite of the client-server protocol.  This will
                     have little impact on users of the builtin kismet
                     interfaces, but all external client authors should read
                     docs/DEVEL.client.  Also includes many fixes to the
                     server behavior and revamped commands.
                    Fixed reconnecting under new server code
                    Added build number to connect output
                    Changed 'tr' use in scripts to avoid errors with some 
                     busybox implementations
                    Changed kismet_curses to kismet_client
                    Fixed soundhandler termination conditions
                    Fixed string extraction
                    Fixed error with client handling
                    Added data size output to details
Nov 22 2002  2.7.1  Fixed UDP interrupt error
                    Added build version/timestamp for CVS commits