@@ -65,7 +65,7 @@ Network/Group types:
   P       Probe request - no associated connection yet
   A       Access point - standard wireless network
   H       Ad-hoc - point-to-point wireless network
-  O       Lucent - Lucent Outdoor Router network
+  T       Turbocell - Turbocell (aka Karlnet and Lucent Outdoor Router)
   G       Group - Group of wireless networks
   D       Data - Data only network with no control packets.
 
